# hw3-omair-gill

./: pyproject.toml
ligotools/tests/: test_readligo.py
